# Hand-written Rocq proofs about the semaphore
#
# These proofs reason about the semaphore's abstract properties
# (invariant preservation, compositional correctness) using Rocq's
# tactic language. They complement the SMT-backed Verus proofs.

load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library", "rocq_proof_test")

# Compile the semaphore proofs
rocq_library(
    name = "sem_proofs",
    srcs = ["sem_proofs.v"],
    deps = [
        "//plain:sem_compiled",
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

# Test: verify all proofs check
rocq_proof_test(
    name = "sem_proofs_test",
    srcs = ["sem_proofs.v"],
    deps = [":sem_proofs"],
)

# ── Mutex proofs ─────────────────────────────────────────────────────────

rocq_library(
    name = "mutex_proofs",
    srcs = ["mutex_proofs.v"],
    deps = [
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

rocq_proof_test(
    name = "mutex_proofs_test",
    srcs = ["mutex_proofs.v"],
    deps = [":mutex_proofs"],
)

# ── CondVar proofs ───────────────────────────────────────────────────────

rocq_library(
    name = "condvar_proofs",
    srcs = ["condvar_proofs.v"],
    deps = [
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

rocq_proof_test(
    name = "condvar_proofs_test",
    srcs = ["condvar_proofs.v"],
    deps = [":condvar_proofs"],
)

# ── MsgQ proofs ──────────────────────────────────────────────────────────

rocq_library(
    name = "msgq_proofs",
    srcs = ["msgq_proofs.v"],
    deps = [
        "//plain:msgq_compiled",
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

rocq_proof_test(
    name = "msgq_proofs_test",
    srcs = ["msgq_proofs.v"],
    deps = [":msgq_proofs"],
)

# ── Stack proofs ─────────────────────────────────────────────────────────

rocq_library(
    name = "stack_proofs",
    srcs = ["stack_proofs.v"],
    deps = [
        "//plain:stack_compiled",
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

rocq_proof_test(
    name = "stack_proofs_test",
    srcs = ["stack_proofs.v"],
    deps = [":stack_proofs"],
)

# ── Pipe proofs ──────────────────────────────────────────────────────────

rocq_library(
    name = "pipe_proofs",
    srcs = ["pipe_proofs.v"],
    deps = [
        "//plain:pipe_compiled",
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

rocq_proof_test(
    name = "pipe_proofs_test",
    srcs = ["pipe_proofs.v"],
    deps = [":pipe_proofs"],
)

# ── Timer proofs ────────────────────────────────────────────────────────

rocq_library(
    name = "timer_proofs",
    srcs = ["timer_proofs.v"],
    deps = [
        "//plain:timer_compiled",
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

rocq_proof_test(
    name = "timer_proofs_test",
    srcs = ["timer_proofs.v"],
    deps = [":timer_proofs"],
)

# ── Event proofs ────────────────────────────────────────────────────────

rocq_library(
    name = "event_proofs",
    srcs = ["event_proofs.v"],
    deps = [
        "//plain:event_compiled",
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

rocq_proof_test(
    name = "event_proofs_test",
    srcs = ["event_proofs.v"],
    deps = [":event_proofs"],
)

# ── MemSlab proofs ──────────────────────────────────────────────────────

rocq_library(
    name = "mem_slab_proofs",
    srcs = ["mem_slab_proofs.v"],
    deps = [
        "//plain:mem_slab_compiled",
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

rocq_proof_test(
    name = "mem_slab_proofs_test",
    srcs = ["mem_slab_proofs.v"],
    deps = [":mem_slab_proofs"],
)
