[package]
name = "gust-target-gen"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Generate per-target constants, linker memory maps, and WIT worlds from a spar/AADL hardware model"
publish = false

[[bin]]
name = "gust-target-gen"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
