[package]
name = "verus-strip"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Strip Verus verification annotations from Rust source, producing plain Rust"
publish = false

[[bin]]
name = "verus-strip"
path = "src/main.rs"

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
prettyplease = "0.2"

[dev-dependencies]
