[package]
name = "gust_browser"
version = "0.1.0"
edition = "2021"
description = "gale + gust in the browser: the formally-verified gale components (gale::sem/msgq, Verus/Kani/Rocq) AND the kiln-async scheduler, as one wasm module — the same code that dissolves to native on Cortex-M3 (gale#74 FIND-BYOOS-002)."

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# git dep (not local path) so the browser demo builds in CI for GitHub Pages. kiln is public.
kiln-async = { git = "https://github.com/pulseengine/kiln", rev = "6966abcdeb1c88edaa86facdccf6cba8712640e9" }
# The formally-verified gale primitives (Verus/Rocq/Lean + Kani). Path into THIS repo,
# which the Pages CI checks out — so the browser runs the actual proven decision logic.
gale = { path = "../../.." }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
