load("@rules_renode//renode:defs.bzl", "renode_test")

# Three M3 device-class Renode targets, each hermetic (own checked-in .repl, no
# dependency on the pinned Renode's bundled platform set). Run on Linux:
#   bazel test //:gust-renode //:gust-control-renode //:gust-f100-renode
# Artifacts (Renode log, robot report) land in
# bazel-testlogs/.../test.outputs/outputs.zip.

# 1. Generic Cortex-M3 + 8 KB SRAM — the DISSOLVED gust kernel; on-target
# confirmation of the synth#383 .bss shrink, beyond qemu's lm3s stand-in.
renode_test(
    name = "gust-renode",
    timeout = "short",
    robot_test = "gust_renode.robot",
    variables_with_label = {
        "ELF": ":gust_wasm.elf",
        "REPL": ":gust_m3_8k.repl",
    },
)

# 2. Cortex-M3 + 64 KB SRAM (STM32F103RE-class) — north-star rung 1: the kiln
# scheduler driving the DISSOLVED engine_control control_step. Asserts the
# spark/fuel CORRECTNESS line (== C/wasmtime) over the SemihostingUart and logs
# the deterministic executed-instruction count (the CI-reproducible cycle seed).
# Its 9408 B .bss needs the 64 KB class — it does not fit the 8 KB F100.
renode_test(
    name = "gust-control-renode",
    timeout = "short",
    robot_test = "gust_control.robot",
    variables_with_label = {
        "ELF": ":gust_control.elf",
        "REPL": ":m3_64k.repl",
    },
)

# 3. REAL STM32F100RB (STM32VLDISCOVERY: Cortex-M3, 128 KB / 8 KB) — the actual
# silicon board in the gust plan; the dissolved gust kernel pinned to the F100's
# exact memory class (closes the README follow-up #3).
renode_test(
    name = "gust-f100-renode",
    timeout = "short",
    robot_test = "gust_f100.robot",
    variables_with_label = {
        "ELF": ":gust_wasm.elf",
        "REPL": ":stm32f100.repl",
    },
)

# 4. Thin-seam UART driver content gate — the dissolved driver (verified-wasm
# USART protocol, Kani-proven RX decision) TXing over a REAL STM32 USART model;
# asserts the emitted bytes via Wait For Line On Uart (content, not just no-fault).
renode_test(
    name = "gust-uart-renode",
    timeout = "short",
    robot_test = "gust_uart.robot",
    variables_with_label = {
        "ELF": ":gust_uart.elf",
        "REPL": ":m3_64k.repl",
    },
)

renode_test(
    name = "gust-gpio-renode",
    timeout = "short",
    robot_test = "gust_gpio.robot",
    variables_with_label = {
        "ELF": ":gust_gpio.elf",
        "REPL": ":gust_gpio.repl",
    },
)

renode_test(
    name = "gust-timer-renode",
    timeout = "short",
    robot_test = "gust_timer.robot",
    variables_with_label = {
        "ELF": ":gust_timer.elf",
        "REPL": ":gust_timer.repl",
    },
)

renode_test(
    name = "gust-spi-renode",
    timeout = "short",
    robot_test = "gust_spi.robot",
    variables_with_label = {
        "ELF": ":gust_spi.elf",
        "REPL": ":gust_spi.repl",
    },
)

# Thin-seam IWDG (independent watchdog) driver content gate — the dissolved driver
# (verified-wasm key-sequence lifecycle, Kani-proven cannot-un-start) exercised on a
# RAM-mapped IWDG window on a real STM32 model; asserts the exact KR/PR/RLR register
# effects via Wait For Line On Uart (content, not just no-fault).
renode_test(
    name = "gust-wdg-renode",
    timeout = "short",
    robot_test = "gust_wdg.robot",
    variables_with_label = {
        "ELF": ":gust_wdg.elf",
        "REPL": ":gust_wdg.repl",
    },
)

# Thin-seam ADC driver content gate — the dissolved driver (verified-wasm STM32F1
# single-conversion path, Kani-proven read-after-EOC exactly-once / single-shot)
# exercised on a RAM-mapped ADC window on a real STM32 model; asserts the exact
# CR2/SMPR/SQR/DR register effects via Wait For Line On Uart (content, not just
# no-fault).
renode_test(
    name = "gust-adc-renode",
    timeout = "short",
    robot_test = "gust_adc.robot",
    variables_with_label = {
        "ELF": ":gust_adc.elf",
        "REPL": ":gust_adc.repl",
# Thin-seam software-triggered DAC driver content gate — the dissolved driver
# (verified-wasm DAC CR/DHR/SWTRIGR/DOR protocol, Kani-proven glitch-free
# trigger-gated output) exercised on a RAM-mapped DAC window on a real STM32 model;
# asserts the exact CR/DHR/SWTRIGR register effects AND that a staged DHR code does
# not move DOR until a trigger fires via Wait For Line On Uart (content, not just
# no-fault).
renode_test(
    name = "gust-dac-renode",
    timeout = "short",
    robot_test = "gust_dac.robot",
    variables_with_label = {
        "ELF": ":gust_dac.elf",
        "REPL": ":gust_dac.repl",
# Thin-seam advanced-timer PWM driver content gate — the dissolved driver (verified-wasm
# PWM output path, Kani-proven duty clamp + total/latching failsafe) exercised on a
# RAM-mapped timer window on a real STM32 model; asserts the exact PSC/ARR/CCMR1/CCER/
# CR1/CCR1/BDTR register effects, that a commanded duty above the period clamps to ARR,
# and that a tripped failsafe stays off, via Wait For Line On Uart (content, not just
# no-fault).
renode_test(
    name = "gust-pwm-renode",
    timeout = "short",
    robot_test = "gust_pwm.robot",
    variables_with_label = {
        "ELF": ":gust_pwm.elf",
        "REPL": ":gust_pwm.repl",
# Thin-seam I2C driver content gate — the dissolved driver (verified-wasm STM32F1 I2C
# master path, Kani-proven ACK-all-but-last) driving a 3-byte master read on a
# RAM-mapped I2C1 window on a real STM32 model; asserts the exact CR2/CCR/TRISE/CR1
# register effects and that CR1.STOP is written EXACTLY on the last byte via Wait For
# Line On Uart (content, not just no-fault).
renode_test(
    name = "gust-i2c-renode",
    timeout = "short",
    robot_test = "gust_i2c.robot",
    variables_with_label = {
        "ELF": ":gust_i2c.elf",
        "REPL": ":gust_i2c.repl",
# Thin-seam CAN (bxCAN) driver content gate — the dissolved driver (verified-wasm
# bxCAN master path, Kani-proven config-only-in-init) exercised on a RAM-mapped CAN1
# window on a real STM32 model; asserts the exact MCR/BTR/TIxR/RF0R register effects
# via Wait For Line On Uart (content, not just no-fault). BTR is written only inside
# Init and left untouched by a config once Normal — the distinctive safety property.
renode_test(
    name = "gust-can-renode",
    timeout = "short",
    robot_test = "gust_can.robot",
    variables_with_label = {
        "ELF": ":gust_can.elf",
        "REPL": ":gust_can.repl",
# DMA-as-own<buffer> ownership driver content gate — the dissolved dma-own driver
# (gale#124, Kani 6/6: a DMA transfer modeled as an own<buffer> ownership round-trip,
# with the cache/barrier op emitted BY CONSTRUCTION at every handoff) exercised on a
# RAM-mapped DMA descriptor + coherency window on a real STM32 model; asserts the exact
# program/barrier effects the driver pokes through the gust:hal dma seam and the
# ownership FSM (Wasm->Dma->Wasm, abort-never-ownerless) via Wait For Line On Uart.
renode_test(
    name = "gust-dma-renode",
    timeout = "short",
    robot_test = "gust_dma.robot",
    variables_with_label = {
        "ELF": ":gust_dma.elf",
        "REPL": ":gust_dma.repl",
    },
)

renode_test(
    name = "gust-breadth-renode",
    timeout = "short",
    robot_test = "gust_breadth.robot",
    variables_with_label = {
        "ELF": ":gust_breadth.elf",
        "REPL": ":gust_breadth.repl",
    },
)

# v0.6.0 MULTI-CORE placement demo for the outer partition switch
# (REQ-OS-SWITCH-001 / VER-OS-SWITCH-001): TWO Cortex-M3 cores with per-core
# private flash/SRAM/NVIC/UART. Core 0 = the VERIFIED Switcher driving the
# 3-partition major frame (flight/mission/payload sharing the core), MPU
# programmed only via the VERIFIED switch_to_partition; core 1 = the estimator
# partition concurrently under its own verified-programmed map. Content-gated
# per line on each core's own UART. Honest scope: Renode's M3 models MPU
# register STATE but not enforcement (spike src/bin/mpu_spike_renode.rs) —
# enforcement evidence is the qemu gust_switch_probe.
renode_test(
    name = "gust-switch-2core-renode",
    timeout = "short",
    robot_test = "gust_switch_2core.robot",
    variables_with_label = {
        "ELF0": ":gust_switch_renode.elf",
        "ELF1": ":gust_estimator_part.elf",
        "REPL": ":gust_switch_2core.repl",
    },
)

